feat: adicionado persistencia no banco de dados e uso do lombok para construtores